--- a/src/Cliente/Login.form
+++ b/src/Cliente/Login.form
@@ -110,6 +110,9 @@
       <Properties>
         <Property name="name" type="java.lang.String" value="txtPass" noResource="true"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtPassActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="btnSalir">
       <Properties>
